--- a/index.html
+++ b/index.html
@@ -31,8 +31,21 @@
         </div>
     </div>
   </header>
+
+  <section class="banner">
+    <div class="container">
+      <div class="banner__wrapper">
+        <div class="banner__text">
+          <h1>Creative Visual Design</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis maiores consequuntur rerum, officia voluptatum recusandae delectus dicta nulla numquam sequi, exercitationem dolorem expedita quidem perferendis, quas atque aperiam non tempore.
+          </p>
+          <a href="" class="btn bg--primary">EXPLORE MORE</a>
+        </div>
+        <img src="img/Hero.png" alt="">
+      </div>
+    </div>
+  </section>
   <script src="/script.js"></script>
   </body>
 </html>
 
- 
