--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creative Visual Designs - Home</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/a6726e13c6.js" crossorigin="anonymous"></script>
   </head>
   <body>
   <header class="header">
@@ -44,7 +45,54 @@
         <img src="img/Hero.png" alt="">
       </div>
     </div>
+
   </section>
+
+<section class="srvc">
+  <div class="cotainer">
+    <div class="srvc__wrapper">
+      <div class="srvc__card">
+        <i class="fa-solid fa-globe"></i>
+        <h4>Web Design and Development</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse harum alias vero. Magni veritatis quod in. Et, ea tenetur? Dignissimos cum aut eligendi laboriosam!</p>
+        <a href="" class="btn bg--primary">GET A QUOTE</a>
+      </div>
+      <div class="srvc__card">
+        <i class="fa-solid fa-pen-ruler"></i>
+        <h4>Graphic and Vector Designs</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse harum alias vero. Magni veritatis quod in. Et, ea tenetur? Dignissimos cum aut eligendi laboriosam!</p>
+        <a href="" class="btn bg--primary">GET A QUOTE</a>
+      </div>
+      <div class="srvc__card">
+        <i class="fa-solid fa-envelopes-bulk"></i>
+        <h4>Social Media Specialist</h4>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis esse harum alias vero. Magni veritatis quod in. Et, ea tenetur? Dignissimos cum aut eligendi laboriosam!</p>
+        <a href="" class="btn bg--primary">GET A QUOTE</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="aboutme">
+    <div class="container">
+        <div class="aboutme__wrapper">
+            <div class="aboutme__text">
+                <h3>About Me</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vitae voluptate doloremque. Iusto, soluta hic iure voluptate asperiores fuga tempore voluptas optio, aliquid suscipit placeat ad tenetur animi, impedit saepe.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto vitae voluptate doloremque. Iusto, soluta hic iure voluptate asperiores fuga tempore voluptas optio, aliquid suscipit placeat ad tenetur animi, impedit saepe.</p>
+                </div>
+                    <img src="/img/about2.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+
   <script src="/script.js"></script>
   </body>
 </html>
