--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
 
 <section class="srvc">
-  <div class="cotainer">
+  <div class="container">
     <div class="srvc__wrapper">
       <div class="srvc__card">
         <i class="fa-solid fa-globe"></i>
@@ -91,6 +91,42 @@
 
     </div>
 
+</section>
+
+
+<section class="latest">
+  <div class="container">
+    <div class="latest__title">
+      <h2>Latest Trends</h2>
+      <p>Latest Happening in virtual space</h2>
+    </div>
+    <div class="latest__wrapper">
+      <div class="latest__card">
+        <img src="/img/latest1.png" alt="">
+        <div class="latest__text">
+          <h4>Designing for a cause</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, recusandae?</p>
+          <a href="">Read more . . .</a>
+        </div>
+      </div>
+      <div class="latest__card">
+        <img src="/img/lastest2.png" alt="">
+        <div class="latest__text">
+          <h4>Designing for a cause</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, recusandae?</p>
+          <a href="">Read more . . .</a>
+        </div>
+      </div>
+      <div class="latest__card">
+        <img src="/img/latest3.png" alt="">
+        <div class="latest__text">
+          <h4>Designing for a cause</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, recusandae?</p>
+          <a href="">Read more . . .</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
   <script src="/script.js"></script>
