--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             </div>
             <div class="header__nav">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Service</a></li>
-                    <li><a href="">Updates</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/services.html">Service</a></li>
+                    <li><a href="/updates.html">Updates</a></li>
+                    <li><a href="/contacts.html">Contact</a></li>
                 </ul>
             </div>
             <div class="toggle__menu">
