--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://kit.fontawesome.com/a6726e13c6.js" crossorigin="anonymous"></script>
   </head>
   <body>
+
+   <div class="backToTop">
+      <a href="#banner"><i class="fa-solid fa-chevron-up"></i></a>
+    </div>
+
   <header class="header">
     <div class="container">
         <div class="header__wrapper">
@@ -33,7 +38,7 @@
     </div>
   </header>
 
-  <section class="banner">
+  <section class="banner" id="banner">
     <div class="container">
       <div class="banner__wrapper">
         <div class="banner__text">
