--- a/srvc.html
+++ b/srvc.html
@@ -19,11 +19,11 @@
           </div>
           <div class="header__nav">
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="service.html">Services</a></li>
-              <li><a href="">Updates</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="/about.html">About</a></li>
+              <li><a href="/service.html">Services</a></li>
+              <li><a href="/updates.html">Updates</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="toggle__menu">
